routing data correctly

--- a/html/home.html
+++ b/html/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf-Home</title>
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="icon" href="logo2.jpg" type="image/x-icon">
     
 </head>
@@ -15,7 +15,7 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="../html/contact.html">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Movie Genres</a>
     </nav>
@@ -23,8 +23,8 @@
     <table>
         <tr>
             <td class="movie-details">
-                <a href='login.html'>
-                    <img src="./images/avatar.jpg" alt="Movie 1">
+                <a href='../html/login.html'>
+                    <img src="../images/avatar.jpg" alt="Movie 1">
                 </a>
                 <h2>Avatar</h2>
                 <p>Director: James Cameron</p>
@@ -32,8 +32,8 @@
             </td>
 
             <td class="movie-details">
-                <a href="login.html">
-                    <img src="./images/titanic.jpeg" alt="Movie 1">
+                <a href="../html/login.html">
+                    <img src="../images/titanic.jpeg" alt="Movie 1">
                 </a>
                 <h2>Titanic</h2>
                 <p>Director: James Cameron</p>
@@ -41,8 +41,8 @@
             </td>
 
             <td class="movie-details">
-                <a href="login.html">
-                    <img src="./images/avengers.jpeg" alt="Movie 1">
+                <a href="../html/login.html">
+                    <img src="../images/avengers.jpeg" alt="Movie 1">
             </a>
                 <h2>Avengers Endgame</h2>
                 <p>Director: Anthony Russo</p>
@@ -54,8 +54,8 @@
         <tr>
             <!-- Fourth Movie -->
             <td class="movie-details">
-                <a href="login.html">
-                <img src="./images/rrr.jpeg" alt="RRR">
+                <a href="../html/login.html">
+                <img src="../images/rrr.jpeg" alt="RRR">
             </a>
                 <h2>RRR</h2>
                 <p>Director: S S Rajamouli</p>
@@ -64,8 +64,8 @@
 
             <!-- Fifth Movie -->
             <td class="movie-details">
-                <a href="login.html">
-                <img src="./images/bahubali.jpeg" alt="Bahubali 2">
+                <a href="../html/login.html">
+                <img src="../images/bahubali.jpeg" alt="Bahubali 2">
             </a>
                 <h2>Bahubali 2</h2>
                 <p>Director: S S Rajamouli</p>
@@ -74,8 +74,8 @@
 
             <!-- Sixth Movie -->
             <td class="movie-details">
-                <a href="login.html">
-                <img src="./images/hanuman.jpeg" alt="PK">
+                <a href="../html/login.html">
+                <img src="../images/hanuman.jpeg" alt="PK">
             </a>
                 <h2>Hanuman</h2>
                 <p>Director: Prasanth verma</p>
@@ -85,6 +85,6 @@
 
         <!-- Repeat the structure for additional rows and movies -->
     </table>
-    <script src="./scripts/index.js" defer></script>
+    <script src="../scripts/index.js" defer></script>
 </body>
 </html>
