--- a/html/home1.html
+++ b/html/home1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf-Home</title>
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
     <link rel="icon" href="logo2.jpg" type="image/x-icon">
     
 </head>
@@ -15,7 +15,7 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="contact.html">Contact Us</a>
+        <a href="../html/contact.html">Contact Us</a>
         <a href="#">Services</a>
         <a href="#">Movie Genres</a>
     </nav>
@@ -23,21 +23,21 @@
     <table>
         <tr>
             <td class="movie-details">
-                    <img src="./images/avatar.jpg" alt="Movie 1">
+                    <img src="../images/avatar.jpg" alt="Movie 1">
                 <h2>Avatar</h2>
                 <p>Director: James Cameron</p>
                 <p>Release Date: 2009</p>
             </td>
 
             <td class="movie-details">
-                    <img src="./images/titanic.jpeg" alt="Movie 1">
+                    <img src="../images/titanic.jpeg" alt="Movie 1">
                 <h2>Titanic</h2>
                 <p>Director: James Cameron</p>
                 <p>Release Date: 1997</p>
             </td>
 
             <td class="movie-details">
-                    <img src="./images/avengers.jpeg" alt="Movie 1">
+                    <img src="../images/avengers.jpeg" alt="Movie 1">
                 <h2>Avengers Endgame</h2>
                 <p>Director: Anthony Russo</p>
                 <p>Release Date: 2019</p>
@@ -48,7 +48,7 @@
         <tr>
             <!-- Fourth Movie -->
             <td class="movie-details">
-                <img src="./images/rrr.jpeg" alt="RRR">
+                <img src="../images/rrr.jpeg" alt="RRR">
                 <h2>RRR</h2>
                 <p>Director: S S Rajamouli</p>
                 <p>Release Date: 2022</p>
@@ -56,7 +56,7 @@
 
             <!-- Fifth Movie -->
             <td class="movie-details">
-                <img src="./images/bahubali.jpeg" alt="Bahubali 2">
+                <img src="../images/bahubali.jpeg" alt="Bahubali 2">
                 <h2>Bahubali 2</h2>
                 <p>Director: S S Rajamouli</p>
                 <p>Release Date: 2017</p>
@@ -64,7 +64,7 @@
 
             <!-- Sixth Movie -->
             <td class="movie-details">
-                <img src="./images/hanuman.jpeg" alt="PK">
+                <img src="../images/hanuman.jpeg" alt="PK">
                 <h2>Hanuman</h2>
                 <p>Director: Prasanth verma</p>
                 <p>Release Date: 2024</p>
@@ -73,6 +73,6 @@
 
         <!-- Repeat the structure for additional rows and movies -->
     </table>
-    <script src="./scripts/index.js" defer></script>
+    <script src="../scripts/index.js" defer></script>
 </body>
 </html>
