--- a/html/contact.html
+++ b/html/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - CineSurf</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="logo2.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" href="../images/logo2.jpg" type="image/x-icon">
     <style>
         body {
             background-image: url('./background-image.jpg');
@@ -68,9 +68,9 @@
     <header>
         <h1>CINE SURF MOVIE REVIEW WEBSITE</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="../html/home.html">Home</a>
         </nav>
-        <img class ="logo" src="./logo.jpg" alt="Logo" />
+        <img class ="logo" src="../images/logo.jpg" alt="Logo" />
     </header>
 
    
