--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf - Home</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
     <header>
@@ -29,6 +29,6 @@
         <p>&copy; 2024 CineSurf. All rights reserved.</p>
     </footer>
     
-    <script src="./scripts/index.js" defer></script>
+    <script src="../scripts/index.js" defer></script>
 </body>
 </html>
