--- a/html/login.html
+++ b/html/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="../styles/login.css">
 
 
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form class="login-form" action="home1.html" method="post">
+        <form class="login-form" action="../html/home1.html" method="post">
             <div class="form-group">
                 <label for="email">Gmail:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit"> <a href = "./home1.html">Login</a></button>
+                <button type="submit"> <a href = "../html/home1.html">Login</a></button>
             </div>
 
             <div class="disclaimer">
@@ -31,6 +31,6 @@
             </div>
         </form>
     </div>
-    <script src = "./scripts/index.js" defer></script>
+    <script src = "../scripts/index.js" defer></script>
 </body>
 </html>
