--- a/html/signup.html
+++ b/html/signup.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="./styles/signup.css">
+    <link rel="stylesheet" href="../styles/signup.css">
 </head>
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form class="signup-form" action="home.html" method="post">
+        <form class="signup-form" action="../html/home.html" method="post">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
@@ -21,7 +21,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit"> <a href = "home1.html">Sign Up</a></button>
+                <button type="submit"> <a href = "../html/home1.html">Sign Up</a></button>
             </div>
             <div class="disclaimer">
                 <label for="termsCheckbox">Don't have an account? Click on  <a href="login.html">Login</a></label>
@@ -29,6 +29,6 @@
             
         </form>
     </div>
-    <script src="./scripts/signup.js"></script>
+    <script src="../scripts/signup.js"></script>
 </body>
 </html>
