--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     </nav>
     
     <div class = "c1">
-        <img src = "./images/174333105_padded_logo.png"
+        <img src = "../images/174333105_padded_logo.png"
     </div>
 
     <div class="content">
