--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
-
-    <nav>
+    <nav >
         <a href="home.html" id="nav_icons">Continue as Guest</a>
         <a href="#" id="nav_icons">About Us</a>
         <a href="#" id="nav_icons">FAQ</a>
@@ -16,11 +15,14 @@
     </nav>
     
     <div class = "c1">
-        <img src = "../images/174333105_padded_logo.png"
+        <img src = "../images/174333105_padded_logo.png">
+    </div>
+
+    <div class="below">
+        <img src="../images/index_below.jpg" height="600px" width="900px">
     </div>
 
     <div class="content">
     </div>
-
 </body>
 </html>
