--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit"> <a href = "../html/home1.html">Login</a></button>
+                <button type="submit"> Login</button>
             </div>
 
             <div class="disclaimer">
