--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form class="signup-form" action="../html/home.html" method="post">
+        <form class="signup-form" action="../html/home1.html" method="post">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
@@ -21,7 +21,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit"> <a href = "../html/home1.html">Sign Up</a></button>
+                <button type="submit"> Sign Up</button>
             </div>
             <div class="disclaimer">
                 <label for="termsCheckbox">Don't have an account? Click on  <a href="login.html">Login</a></label>
