--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineSurf</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
 
       <main id="main">
         <div class="movie">
-          <img src="black-panther-121054-328110478.jpg" alt="image">
+          <img src="../images/WhatsApp Image 2024-03-07 at 22.10.25_8b08c71d.jpg" alt="image">
 
           <div class="movie-info">
             <h3>Movie Title</h3>
@@ -42,6 +42,6 @@
       </main>
     
     
-<script src="app.js"></script>  
+<script src="../scripts/app.js"></script>  
 </body>
 </html>
