--- a/html/signup.html
+++ b/html/signup.html
@@ -21,14 +21,15 @@
             </div>
 
             <div class="form-group">
-                <button type="submit"> Sign Up</button>
+                <button type="submit">Sign Up</button>
             </div>
             <div class="disclaimer">
-                <label for="termsCheckbox">Don't have an account? Click on  <a href="login.html">Login</a></label>
+                <label for="termsCheckbox">Already have an account? Click on  <a href="login.html">Login</a></label>
             </div>
-            
         </form>
     </div>
-    <script src="../scripts/signup.js"></script>
+    <!-- Include your JavaScript files here -->
+    <script src = "../scripts/signup.js"></script>
+    
 </body>
 </html>
