--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form class="login-form" action="../html/home1.html" method="post">
+        <form class="login-form" action="../html/index.html" method="post">
             <div class="form-group">
                 <label for="email">Gmail:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
