--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form class="signup-form" action="../html/home1.html" method="post">
+        <form class="signup-form" action="../html/index.html" method="post">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
