--- a/html/landing.html
+++ b/html/landing.html
@@ -30,7 +30,7 @@
             <div class="hero-content">
                 <h2>Welcome to CineSurf</h2>
                 <p>Your ultimate destination for movie reviews and recommendations.</p>
-                <a href="./index.html" class="cta-button">Explore Now</a>
+                <a href="./index.html" class="cta-button">Explore Now (Continue as Guest)</a>
             </div>
         </section>
         
