landing few changes

--- a/html/signup.html
+++ b/html/signup.html
@@ -11,6 +11,10 @@
         <h2>Sign Up</h2>
         <form class="signup-form" action="../html/index.html" method="post">
             <div class="form-group">
+                <label for="Name">Name:</label>
+                <input type="Name" id="Name" name="Name" placeholder="User Name" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="xyz@gmail.com" required>
             </div>
